@@ -2,6 +2,7 @@ package org.sortic.sorticproject.Config;
 
 import jakarta.servlet.Filter;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.sortic.sorticproject.security.token.JwtAuthenticationFilter;
 import org.sortic.sorticproject.security.token.JwtTokenProvider;
 import org.springframework.context.annotation.Bean;
@@ -21,6 +22,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+@Slf4j
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -28,19 +30,17 @@ public class SecurityConfig {
 
     private final JwtTokenProvider jwtTokenProvider;
 
-    /** ✅ 비밀번호 암호화 방식 설정 */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /** ✅ CORS 설정 */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000")); // 프론트 주소
+        config.setAllowedOrigins(List.of("http://localhost:3000"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         config.setExposedHeaders(List.of("Authorization"));
         config.setAllowCredentials(true);
 
@@ -49,7 +49,12 @@ public class SecurityConfig {
         return source;
     }
 
-    /** ✅ Spring Security 필터 체인 설정 */
+    /** ✅ JwtAuthenticationFilter를 Bean으로 등록 */
+    @Bean
+    public JwtAuthenticationFilter jwtAuthenticationFilter() {
+        return new JwtAuthenticationFilter(jwtTokenProvider);
+    }
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -59,7 +64,6 @@ public class SecurityConfig {
             .httpBasic(AbstractHttpConfigurer::disable)
 
             .authorizeHttpRequests(auth -> auth
-                // ✅ 인증 없이 허용해야 하는 경로
                 .requestMatchers(
                     "/api/users/check-userid",
                     "/api/users/check-store",
@@ -72,21 +76,15 @@ public class SecurityConfig {
                     "/api/users/find-id",
                     "/api/users/reset-password"
                 ).permitAll()
-
-                // ✅ Swagger, H2 콘솔 등 추가적으로 개발환경에서만 열리는 경로들
                 .requestMatchers(
                     "/h2-console/**", "/swagger-ui/**", "/v3/api-docs/**"
                 ).permitAll()
-
-                // ✅ 그 외 경로는 인증 필요
                 .anyRequest().authenticated()
             )
 
-            .addFilterBefore(
-                new JwtAuthenticationFilter(jwtTokenProvider),
-                UsernamePasswordAuthenticationFilter.class
-            );
-
+            // ✅ 여기를 수정
+            .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
+            log.info("🛡️ Security 필터 체인 구성 완료됨");
         return http.build();
     }
 }
